# actix-passport

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md
examples/: Cargo.toml
examples/advanced_example/: Cargo.toml  README.md
examples/advanced_example/src/: main.rs  token_helpers.rs
examples/advanced_example/src/services/: token_service.rs
examples/advanced_example/src/stores/: sqlite_store.rs
examples/advanced_example/src/strategies/: bearer_strategy.rs  mod.rs
examples/advanced_example/static/: app.js  index.html
examples/basic_example/: Cargo.toml
examples/basic_example/src/: main.rs
examples/basic_example/static/: app.js
examples/basic_oauth_example/: Cargo.toml
examples/basic_oauth_example/src/: main.rs
examples/basic_oauth_example/static/: app.js
examples/basic_password_auth/src/: main.rs
examples/basic_password_example/: Cargo.toml
examples/basic_password_example/src/: main.rs
examples/basic_password_example/static/: index.html
examples/email_example/: .env.example  Cargo.toml  README.md
examples/email_example/src/: main.rs
examples/email_example/static/: app.js  email-verified.html  index.html  reset-password.html
examples/email_example/templates/: email_verification_html.html  email_verification_text.txt  password_reset_html.html  password_reset_text.txt
examples/oauth_example/: .env.example  README.md
examples/oauth_example/src/: main.rs
examples/oauth_example/static/: app.js  index.html
examples/postgres_example/: Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  init.sql
examples/postgres_example/migrations/2025-07-03-201838_create_users/: up.sql
examples/postgres_example/src/: main.rs  models.rs  schema.rs  user_store.rs
examples/postgres_example/static/: app.js  index.html
src/: builder.rs  config.rs  core.rs  errors.rs  lib.rs  main.rs  middleware.rs  oauth.rs  password.rs  prelude.rs  routes.rs  types.rs
src/core/: mod.rs
src/email/: config.rs  mod.rs  service.rs  smtp_provider.rs  templates.rs  tokens.rs
src/middleware/: jwt_auth.rs  mod.rs  session_auth.rs  utils.rs
src/middleware/schemes/: jwt_auth.rs  mod.rs  session_auth.rs
src/oauth/: mod.rs  service.rs
src/oauth/providers/: generic_provider.rs  github_provider.rs  google_provider.rs  mod.rs
src/password/: hasher.rs  mod.rs  password.rs  service.rs
src/routes/: auth.rs  mod.rs  oauth.rs
src/strategies/: mod.rs
src/strategies/oauth/: mod.rs  routes.rs  service.rs
src/strategies/oauth/oauth_provider/: mod.rs
src/strategies/oauth/oauth_provider/providers/: generic_provider.rs  github_provider.rs  google_provider.rs  mod.rs
src/strategies/oauth/provider/: mod.rs
src/strategies/oauth/provider/providers/: generic_provider.rs  github_provider.rs  google_provider.rs
src/strategies/password/: mod.rs  routes.rs  service.rs
src/strategy/: mod.rs
src/strategy/strategies/: mod.rs
src/strategy/strategies/oauth/: mod.rs  routes.rs
src/strategy/strategies/password/: mod.rs  routes.rs
src/user_store/: mod.rs
src/user_store/stores/: in_memory.rs  mod.rs
src/user_store/stores/common/: error_mapping.rs  json_helpers.rs  mod.rs  sql_helpers.rs
src/user_store/stores/postgres/: mod.rs
src/user_store/stores/postgres/migrations/: 20240703120000_create_users_table.sql  20240703120001_add_indexes.sql
tests/: README.md  common.rs  email_tests.rs  integration_tests.rs  jwt_auth_tests.rs  jwt_tests.rs  oauth_tests.rs  password_auth_tests.rs
