[package]
name = "actix-passport"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible authentication framework for actix-web"
repository = "https://github.com/yourusername/actix-passport"
keywords = ["actix", "web", "authentication", "oauth", "session"]
categories = ["web-programming", "authentication"]

[dependencies]
actix-web = "4.4"
actix-session = "0.8"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
base64 = "0.21"
rand = "0.8"
argon2 = "0.5"
jsonwebtoken = "8.3"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"
env_logger = "0.10"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["password", "oauth", "jwt"]
password = []
oauth = []
jwt = []

[lints.clippy]
pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 2 }
all = { level = "warn", priority = 3 }
missing_docs = { level = "warn" }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
