[package]
name = "actix-passport"
version = "0.1.0"
edition = "2021"
authors = ["Dens Sumesh <dens.sumesh79@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A flexible authentication framework for actix-web"
repository = "https://github.com/densumesh/actix-passport"
keywords = ["actix", "web", "authentication", "oauth", "session"]
categories = ["web-programming", "authentication"]

[dependencies]
actix-web = "4.4"
actix-session = { version = "0.10", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
rand = "0.9"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
futures-util = "0.3"
dyn-clone = "1.0.19"

# Optional database dependencies
sqlx = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
actix-http = "3.11"

[features]
default = ["password", "oauth", "postgres"]
password = []
oauth = []

# Database store implementations
postgres = [
    "dep:sqlx",
    "sqlx/postgres",
    "sqlx/runtime-tokio-rustls",
    "sqlx/chrono",
    "sqlx/uuid",
    "sqlx/json",
    "sqlx/migrate",
    "sqlx/macros",
]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 2 }
all = { level = "warn", priority = 3 }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
future_not_send = { level = "allow" }
