[workspace]
resolver = "2"
members = [
    "basic_password_example",
    "basic_oauth_example",
    "postgres_example",
    "advanced_example",
]

[workspace.dependencies]
actix-passport = { path = "../" }
actix-web = "4.4"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = "0.4"
dotenv = "0.15"
url = "2.4"
