[package]
name = "advanced_sqlite_bearer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-passport = { path = "../../", features = ["password"] }
actix-web = "4.4"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "2.0"
argon2 = "0.5"

# SQLite dependencies
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Token generation
rand = "0.8"
hex = "0.4"