[package]
name = "basic_example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-passport = { path = "../../" }
actix-web = "4.4"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-files = "0.6"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
serde = "1.0"
async-trait = "0.1"
log = "0.4"
