[package]
name = "oauth_example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-passport = { workspace = true }
actix-web = { workspace = true }
actix-session = { workspace = true }
actix-files = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
dotenv = { workspace = true }