[package]
name = "postgres_example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-passport = { path = "../../" }
actix-web = "4.4"
actix-session = { version = "0.10", features = ["cookie-session"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1", features = [
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
bb8 = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
env_logger = "0.11"
dotenvy = "0.15"
anyhow = "1.0"
